--- a/schoolnotes/topology/topology.tex
+++ b/schoolnotes/topology/topology.tex
@@ -111,6 +111,7 @@
 	The subset \(Y\) is closed if \(Y=\overline{Y}\).\footnote{The empty set \(\emptyset\) and \(X\) are closed subsets of \(X\). Interestingly, \(X\) is also open in \(X\).}
 \end{defi}
 \begin{thm}
+	\label{thm:1:closure}
 If \(Y\) is a subset of a metric space \(X\), then the closure of \(Y\) is closed, i.e.
 	\begin{equation*}
 		\overline{\overline{Y}}=\overline{Y}
@@ -152,6 +153,7 @@ If \(Y\) is a subset of a metric space \(X\), then the closure of \(Y\) is close
 	\end{IEEEproof}
 \end{lem}
 \begin{thm}
+\label{thm:1:converge}
 	Let \(Y\) be a subset of the metric space \(X\), then \(x\in X\) is adherent to \(Y\) iff there is a sequence in \(Y\) that converges to \(x\).
 	\begin{IEEEproof}
 		If \(x\) is adherent to \(Y\), then \(\forall r>0\), \(B(x,r)\cap Y\neq\emptyset\), i.e. for all \(r\) there exits \(y\in Y\) such that \(d(x,y_n)<r\). Using this fact we can construct a sequence that converges to \(x\). Let \(y_n\in Y\), and \(\{y_n\}\) be a sequence such that for all \(\epsilon>0\) there exists \(N\in\mathbb{N}\) such that \(n>N\) implies \(d(x,y)<\epsilon\).\bigbreak
@@ -222,7 +224,7 @@ If \(Y\) is a subset of a metric space \(X\), then the closure of \(Y\) is close
 	\begin{IEEEproof}
 		We shall prove that \(\bigcap_{n=1}^{\infty}U_n\) is dense in \(X\) by showing that for any ball with \(r>0\) and \(x\in X\)  there exists \(y\in\bigcap_{n=1}^{\infty}U_n\) such that \(y\in B(x,r)\).\bigbreak
 		If \(\epsilon>0\) there exists \(y_1\in U_1\) such that \(y_1\in B(x,\epsilon)\). Because \(B(x,\epsilon)\) and \(U_1\) are both open, there exists \(1>r_1>0\) such that \(B(y_1,r_1)\subseteq U_1\cap B(x,\epsilon)\) and by shrinking \(r_1\) we have \(\overline{B(y_1,r_1)}\subseteq U_1\cap B(x,\epsilon)\). This procedure can be repeated by replacing \(B(x,\epsilon)\) by \(B(y_1,r_1)\), and finding \(y_2\in U_2\cap B(y_1,r_1)\) with \(1/2>r_2>0\) such that \(\overline{B(y_2,r_2)}\subseteq U_2\cap B(y_1,r_1)\).\footnote{Such \(y_2,r_2\) exist because \(y_1\in X\) and \(U_2\) is dense in \(X\), so for every \(r_1\)-ball of \(y_1\) there exists \(y_2\in U_2\) such that \(y_2\) is in this ball.}
-		We can then define a cauchy sequence \(\{y_n\}_{n=1}^{\infty}\) with each \(y_n\) satisfying \(\overline{B(y_n,r_n)}\subseteq U_{n}\cap B(y_{n-1}, r_{n-1})\) with \(1/n>r_n>0\). Because \(X\) is complete, we know that \(\lim_{n\rightarrow\infty}y_n=y\) with \(y\in X\). If \(y\notin\bigcap_{n=1}^{\infty}U_n\) then there exists \(n\) such that \(y\notin B(y_n,r_n)\). If \(m>n\) Then \(y_m\in \overline{B(y_m,r_m)}\cap B(y_n,r_n)\). Because the limit of any convergent sequence in \(B(y_m,r_m)\) is in \(\overline{B(y_m,r_m)}\), it follows that \(y\in B(y_n,r_n)\), a contradiction. Therefore \(y\in\bigcap_{n=1}^{\infty}U_n\).
+		We can then define a cauchy sequence \(\{y_n\}_{n=1}^{\infty}\) with each \(y_n\) satisfying \(\overline{B(y_n,r_n)}\subseteq U_{n}\cap B(y_{n-1}, r_{n-1})\) with \(1/n>r_n>0\). Because \(X\) is complete, we know that \(\lim_{n\rightarrow\infty}y_n=y\) with \(y\in X\). If \(y\notin\bigcap_{n=1}^{\infty}U_n\) then there exists \(n\) such that \(y\notin B(y_n,r_n)\). If \(m>n\) Then \(y_m\in \overline{B(y_m,r_m)}\cap B(y_n,r_n)\). By theorems \ref{thm:1:converge} and \ref{thm:1:closure}, the limit of any convergent sequence in \(\overline{B(y_m,r_m)}\) is in \(\overline{B(y_m,r_m)}\), it follows that \(y\in B(y_n,r_n)\), a contradiction. Therefore \(y\in\bigcap_{n=1}^{\infty}U_n\).
 	\end{IEEEproof}
 \end{thm}
 \begin{defi}[Nowhere dense]
@@ -238,11 +240,22 @@ If \(Y\) is a subset of a metric space \(X\), then the closure of \(Y\) is close
 	\item \(d(x,y)=\big[d_1(x_1,y_1)^2+\ldots+d_n(x_n,y_n)^2\big]^{1/2}\).
 	\item \(\text{max}\big(d_1(x_1,y_1),\ldots,d_n(x_n,y_n)\big)\).
 	\item \(d(x,y)=d(x_1,y_1)+\ldots+d_n(x_n,y_n)\).
-	\item A sequence \(\{x^{j}=x_k^j\}_{j=1}^{\infty}\) converges to \(x=(x_1,\ldots,x_n)\) in \(X\) iff for each \(k\) the sequence of component entries \(\{x_k^j\}_{j=1}^{\infty}\) converges to \(x_k\) in \(X_k\).
+	\item A sequence \(\{x^{j}=(x_k^j)\}_{j=1}^{\infty}\) converges to \(x=(x_1,\ldots,x_n)\) in \(X\) iff for each \(k\) the sequence of component entries \(\{x_k^j\}_{j=1}^{\infty}\) converges to \(x_k\) in \(X_k\).
 	\item \(d_k(x_k,y_k)\leq d(x,y),\qquad x,y\in X, 1\leq K\leq n\).
 \end{enumerate}
 \begin{thm}
 	Suppose that \(d\) is a metric on \(X=X_1\times\ldots\times X_n\) that satisfies property \(4.4\). Then the open sets in \((X,d)\) are the unions of product sets of the form \(U_1\times\ldots\times U_n\), where \(U_j\) is an open subset of \(X_j,\;1\leq j\leq n\).
+	\begin{IEEEproof}
+		Suppose that \(U\) an open subset of \(X\) and \(y=(y_1,\ldots, y_n)\in U\). If \(1\leq m\leq\infty\), Because \(y_n\in B(y_n,1/m)\) it follows that \(y\) is an element of the product of open balls \(B(y_1,1/m)\times\ldots\times B(y_n,1/m)\). Suppose to the contrary that there does not exist \(\epsilon>0\) such that \(B(y_1,\epsilon)\times\ldots\times B(y_n,\epsilon)\subseteq U\). Then for all \(m\) there exist \(x^m=(x^{m}_{1},\ldots,x^{m}_{n})\in U^{c}\) such that for all \(k\), \(1\leq k\leq n\), we have \(x^{m}_{k}\in B(y_k,1/m)\), i.e.
+		\begin{equation*}
+			\lim_{m\rightarrow\infty}x^{m}_{k}=y_k.
+		\end{equation*}
+		But following property 4.4 this means
+		\begin{equation*}
+			\lim_{m\rightarrow\infty}x^{m}=y.
+		\end{equation*}
+		It follows that because \(x^{m}\in U^{c}\), \(y\in \overline{U^{c}}\). \(U^{c}\) is closed, so it follows that \(y\in U^{c}\), a contradiction.
+	\end{IEEEproof}
 \end{thm}
 \begin{thm}
 	Let \((X_1,d_1),\ldots,(X_n,d_n)\) be complete metric spaces. Let \(d\) be a metric on \(X=X_1\times\ldots\times X_n\) that satisfies \((4.4)\) and \((4.5)\). Then \((X,d)\) is complete.
