--- a/schoolnotes/topology/topology.tex
+++ b/schoolnotes/topology/topology.tex
@@ -248,11 +248,11 @@ If \(Y\) is a subset of a metric space \(X\), then the closure of \(Y\) is close
 	\begin{IEEEproof}
 		Suppose that \(U\) an open subset of \(X\) and \(y=(y_1,\ldots, y_n)\in U\). If \(1\leq m\leq\infty\), Because \(y_n\in B(y_n,1/m)\) it follows that \(y\) is an element of the product of open balls \(B(y_1,1/m)\times\ldots\times B(y_n,1/m)\). Suppose to the contrary that there does not exist \(\epsilon>0\) such that \(B(y_1,\epsilon)\times\ldots\times B(y_n,\epsilon)\subseteq U\). Then for all \(m\) there exist \(x^m=(x^{m}_{1},\ldots,x^{m}_{n})\in U^{c}\) such that for all \(k\), \(1\leq k\leq n\), we have \(x^{m}_{k}\in B(y_k,1/m)\), i.e.
 		\begin{equation*}
-			\lim_{m\rightarrow\infty}x^{m}_{k}=y_k.
+			\lim_{m\rightarrow\infty}d_{k}(x^{m}_{k}, y_k)=0.
 		\end{equation*}
 		But following property 4.4 this means
 		\begin{equation*}
-			\lim_{m\rightarrow\infty}x^{m}=y.
+			\lim_{m\rightarrow\infty}d(x^{m},y)=0.
 		\end{equation*}
 		It follows that because \(x^{m}\in U^{c}\), \(y\in \overline{U^{c}}\). \(U^{c}\) is closed, so it follows that \(y\in U^{c}\), a contradiction.
 	\end{IEEEproof}
